// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getReferenceTo should be able to instantiate with more specific reference class if one exists 1`] = `
CNCMachineReference {
  "identifiedBy": DeclaredResourceReferenceIdentifier {
    "key": "UNIQUE_KEY",
    "value": DeclaredResourceReferenceIdentifierValue {
      "serialNumber": "821",
    },
  },
  "referenceOf": "CNCMachine",
}
`;

exports[`getReferenceTo should be able to reference by primary key 1`] = `
DeclaredResourceReference {
  "identifiedBy": DeclaredResourceReferenceIdentifier {
    "key": "PRIMARY_KEY",
    "value": DeclaredResourceReferenceIdentifierValue {
      "uuid": "__UUID__",
    },
  },
  "referenceOf": "CNCMachine",
}
`;

exports[`getReferenceTo should be able to reference by unique key 1`] = `
DeclaredResourceReference {
  "identifiedBy": DeclaredResourceReferenceIdentifier {
    "key": "UNIQUE_KEY",
    "value": DeclaredResourceReferenceIdentifierValue {
      "serialNumber": "821",
    },
  },
  "referenceOf": "CNCMachine",
}
`;

exports[`getReferenceTo should reference by unique key if both are available 1`] = `
DeclaredResourceReference {
  "identifiedBy": DeclaredResourceReferenceIdentifier {
    "key": "UNIQUE_KEY",
    "value": DeclaredResourceReferenceIdentifierValue {
      "serialNumber": "821",
    },
  },
  "referenceOf": "CNCMachine",
}
`;

exports[`getReferenceTo should throw a helpful error the class does not have primary key defined correctly 1`] = `[Error: Can not reference declared resource of class 'CNCMachine'. Instances of the class 'CNCMachine' can not be referenced because the static property 'primary' was not defined as an array of strings.]`;

exports[`getReferenceTo should throw a helpful error the class does not have unique key defined 1`] = `[Error: Can not reference declared resource of class 'CNCMachine'. Instances of the class 'CNCMachine' can not be referenced because the static property 'unique' was not defined as an array of strings.]`;
